Before Removing DevExpress

--- a/Web.config
+++ b/Web.config
@@ -55,7 +55,7 @@
     <mailSettings>
       <smtp deliveryMethod="Network">
         <!--**change gmail**-->
-        <network host="smtp.gmail.com" enableSsl="true" userName="jigar1822@gmail.com" port="587" password="jigar15@15" />
+        <network host="smtp.gmail.com" enableSsl="true" userName="something@gmail.com" port="587" password="something" />
       </smtp>
     </mailSettings>
   </system.net>
